# simea

./: README.md
src/: CMakeLists.txt  main.c  simea.cpp
src/graphics/plotter/: README.md
src/graphics/view2D/: README.md
src/graphics/view3D/: README.md
src/mesher/: README.md  mesher.cpp  mesher.h
src/model/: README.md  model.h
src/modeler/: README.md  materials.h  modeler.c  modeler.cpp  modeler.h  readSTL.cpp
src/solver/: README.md  solver.h
src/solver/electromagnetics/: README.md
src/solver/fluids/: README.md
src/solver/thermal/: README.md
